<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">erosen_ElieRosen</string>
    <string name="action_settings">Settings</string>
    <string name="myUrl">http://www.winlab.rutgers.edu/~janne/mobisys14gesturesecurity.pdf</string>
    <string name="myWifiStatus">False</string>
    <string name="myDownloadProgressPercent">0%</string>
    <string name="stWait">Wait for WIFI</string>
    <string name="stBtnDownload">Download Now</string>
    <string name="stUrl">URL:</string>
    <string name="stDownloadProgress">Download Progress:</string>
    <string name="stWifiStatus">WIFI Status:</string>
    <string name="cstatus">Current Status:</string>
    <string name="myStatus">myStatus</string>

</resources>
